--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,12 +1,16 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <title>BLOG</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
         {% for post in posts %}
         <div>
-            <h2>{{ post.title }}</a></h2>
+            <h2>a{{ post.title }}</h2>
             <p>{{ post.text|linebreaksbr }}</p>
             <p>publish: {{ post.publish_date }}</p>
         </div>
