--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,13 +1,12 @@
-
 .page-header {
-    background-color: #74c4e9;
-    margin-top: auto;
+    background-color: gold;
+    margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #d7fa3b;
-    font-size: 36pt;
+    color: #ffffff;
+    font-size: 42pt;
     text-decoration: none;
 }
 
@@ -16,11 +15,11 @@
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Tomorrow', sans-serif;
+    font-family: 'Lobster', cursive;
 }
 
 .date {
-    color: #bd9090;
+    color: #828282;
 }
 
 .save {
@@ -32,7 +31,7 @@ h1, h2, h3, h4 {
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
-    color: #1b8abe;
+    color: #ffffff;
     float: right;
     font-size: 26pt;
     margin-right: 20px;
@@ -43,5 +42,5 @@ h1, h2, h3, h4 {
 }
 
 .post h2 a, .post h2 a:visited {
-    color: #7b61c2;
+    color: #000000;
 }
