--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,5 +20,8 @@
                 </div>
             </div>
         </div>
+        <div class="page-footer">
+            <h1></h1>
+        </div>
     </body>
 </html>
